--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,12 +8,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="123dp"
-        android:layout_height="145dp"
-        android:layout_marginTop="228dp"
+        android:layout_width="96dp"
+        android:layout_height="109dp"
+        android:layout_marginTop="116dp"
         android:background="@drawable/ic_daraz"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,11 +20,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="Completed Sample JSON Parse"
+        android:layout_marginTop="8dp"
+        android:text="Full Source code available at: https://github.com/SimantDhakal/"
         android:textColor="@color/colorLink"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:textStyle="bold"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
