--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,6 +20,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:paddingBottom="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -27,6 +30,7 @@
                     android:text="Flash Sale"
                     android:textColor="@color/colorBlack"
                     android:layout_weight="1"
+                    android:textStyle="bold"
                     android:textSize="16dp"/>
 
                 <TextView
@@ -52,6 +56,8 @@
             android:layout_height="wrap_content"
             android:text="JUST FOR YOU"
             android:textSize="16dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"/>
