--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,18 +18,15 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginRight="40dp"
+        android:layout_width="353dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="28dp"
         android:text="Full Source code available at: https://github.com/SimantDhakal/"
         android:textAlignment="center"
         android:textColor="@color/colorLink"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
