--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,24 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.simant.darazclone_simant.ui.home.HomeFragment"
+        android:name="com.Suresh.darazEcommerce.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.simant.darazclone_simant.ui.dashboard.DashboardFragment"
+        android:name="com.Suresh.darazEcommerce.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.simant.darazclone_simant.ui.notifications.NotificationsFragment"
+        android:name="com.Suresh.darazEcommerce.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/navigation_account"
+        android:name="com.Suresh.darazEcommerce.ui.account.AccountFragment"
+        android:label="Account"
+        tools:layout="@layout/fragment_account"/>
 </navigation>
